# RC-WebControl

./: start_all.sh
ffserver/: sample.html
native/: CMakeLists.txt  Makefile  start_control_server.sh  start_video_server.sh
native-v4l2/src/: video_server_main.cpp
native-v4l2/src/misc/: Clock.hpp
native-v4l2/src/tcp/: TcpServer.cpp
native-v4l2/src/video/: CaptureOpencv.cpp  CaptureOpencv.hpp  CaptureV4l2.cpp  CaptureV4l2.hpp
native/src/: control_server_main.cpp  video_server_main.cpp  video_server_main.cpp.withThread
native/src/tcp/: TcpServer.cpp  TcpServer.hpp  TcpSocket.cpp  TcpSocket.hpp
native/src/video/: Capture.cpp  Capture.hpp
node/: camera.js  handle_gamepad.js  handle_video.js  main.js  package.json  test.js  webpage.js
node/public/: index.css
node/views/: index.ejs
